Fix scaling issues on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -19,7 +19,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     padding: 1%;
-    border-radius: 96px 96px 48px 48px;
+    border-radius: 4vh 4vh 2vh 2vh;
     box-shadow: -0.5vh 0.8vh 0.5vh 0.5vh;
 
     margin-bottom: 32px;
@@ -39,19 +39,18 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    border-radius: 96px 96px 48px 48px;
+    border-radius: 4vh 4vh 2vh 2vh;
     padding: 2vh;
     box-shadow: inset -0.3vh 0.5vh;
 }
 button {
-    font-size: 6vh;
+    font-size: 48px;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 
     box-sizing: border-box;
-    padding: 12px 24px;
     border: none;
-    border-radius: 48px;
+    border-radius: 2vh;
     flex-grow: 1;
     flex-shrink: 1;
     margin: 1%;
